# server/src/swagger.json
@@ -771,6 +771,157 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"_36_Enums.ProjectStatus": {
+				"type": "string",
+				"enum": [
+					"COMPLETED",
+					"ACTIVE",
+					"ARCHIVED"
+				]
+			},
+			"DefaultSelection_Prisma._36_ProjectPayload_": {
+				"properties": {
+					"ownerId": {
+						"type": "string"
+					},
+					"endDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"status": {
+						"$ref": "#/components/schemas/_36_Enums.ProjectStatus"
+					},
+					"description": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"ownerId",
+					"endDate",
+					"updatedAt",
+					"createdAt",
+					"status",
+					"description",
+					"id",
+					"name"
+				],
+				"type": "object"
+			},
+			"Project": {
+				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_ProjectPayload_",
+				"description": "Model Project"
+			},
+			"ApiResponse_Project_": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Project"
+							}
+						],
+						"nullable": true
+					},
+					"errors": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Record_string.string_"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"success",
+					"message",
+					"data",
+					"errors"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateProjectInput": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ApiResponse_Project-Array_": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/Project"
+						},
+						"type": "array",
+						"nullable": true
+					},
+					"errors": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Record_string.string_"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"success",
+					"message",
+					"data",
+					"errors"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UpdateProjectInput": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ApiResponse_any_": {
 				"properties": {
 					"success": {
@@ -1621,7 +1772,7 @@
 				}
 			}
 		},
-		"/api/v1/projects": {
+		"/projects": {
 			"post": {
 				"operationId": "Create",
 				"responses": {
@@ -1629,34 +1780,28 @@
 						"description": "Created",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_Project_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"ownerId": {
-										"type": "string"
-									},
-									"description": {
-										"type": "string"
-									},
-									"name": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"ownerId",
-									"name"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/CreateProjectInput"
 							}
 						}
 					}
@@ -1669,16 +1814,25 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_Project-Array_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": []
 			}
 		},
-		"/api/v1/projects/{id}": {
+		"/projects/{id}": {
 			"get": {
 				"operationId": "GetById",
 				"responses": {
@@ -1686,12 +1840,21 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_Project_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1710,12 +1873,21 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_Project_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1731,18 +1903,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"description": {
-										"type": "string"
-									},
-									"name": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"name"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/UpdateProjectInput"
 							}
 						}
 					}
@@ -1755,12 +1916,21 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_null_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1773,20 +1943,29 @@
 				]
 			}
 		},
-		"/api/v1/projects/{id}/complete": {
-			"put": {
+		"/projects/{id}/complete": {
+			"patch": {
 				"operationId": "Complete",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_Project_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1799,20 +1978,29 @@
 				]
 			}
 		},
-		"/api/v1/projects/{id}/archive": {
-			"put": {
+		"/projects/{id}/archive": {
+			"patch": {
 				"operationId": "Archive",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/ApiResponse_Project_"
+								}
 							}
 						}
 					}
 				},
-				"security": [],
+				"tags": [
+					"Projects"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
